<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemChangeNote"
        android:title="@string/changeNote"/>
    <item
        android:id="@+id/itemDeleteNote"
        android:title="@string/deleteNote"/>
</menu>