...
            app:titleTextColor="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:spanCount="2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/indent"
        tools:listitem="@layout/item" />
...
